# sparrow-reference-firmware

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Dockerfile  README.md  arm-gcc-toolchain.cmake  cmake-build.sh  register.c
.STM32CubeIDE/: .cproject  .project
.devcontainer/: devcontainer.json
.github/actions/sparrow-lora-only/: action.yml
.github/workflows/: sparrow-ci.yml
STM32CubeIDE/: .cproject  .project  STM32WL55JCIX_FLASH.ld
STM32CubeIDE/Debug/: makefile  objects.list  sources.mk  sparrow.elf  sparrow.list  sparrow.map
STM32CubeIDE/Debug/Application/App/: subdir.mk
STM32CubeIDE/Debug/Application/Core/: subdir.mk
STM32CubeIDE/Debug/Application/Gateway/: subdir.mk
STM32CubeIDE/Debug/Application/Sensor/: subdir.mk
STM32CubeIDE/Debug/Application/Sensor/bme280/: subdir.mk
STM32CubeIDE/Debug/Drivers/STM32WLxx_HAL_Driver/: subdir.mk
STM32CubeIDE/Debug/Middlewares/SubGHz_Phy/: subdir.mk
STM32CubeIDE/Debug/Utilities/: subdir.mk
STM32CubeIDE/Debug/application-sensors/: init.d  init.su  subdir.mk
STM32CubeIDE/Debug/application-sensors/bme/: bme.d  bme.su  subdir.mk
STM32CubeIDE/Debug/application-sensors/bme/bme280/: bme280.d  bme280.su  subdir.mk
STM32CubeIDE/Debug/application-sensors/button/: button.d  button.su  subdir.mk
STM32CubeIDE/Debug/application-sensors/diag/: diag.d  diag.su  subdir.mk
STM32CubeIDE/Debug/application-sensors/ping/: ping.d  ping.su  subdir.mk
STM32CubeIDE/Debug/application-sensors/pir/: pir.d  pir.su  subdir.mk
STM32CubeIDE/Debug/note-c/: n_atof.d  n_b64.d  n_b64.su  n_cjson.d  n_cjson.su  n_cjson_helpers.d  n_cjson_helpers.su  n_const.d  n_ftoa.d  n_ftoa.su  n_helpers.d  n_helpers.su  n_hooks.d  n_hooks.su  n_i2c.d  n_i2c.su  n_md5.d  n_md5.su  n_request.d  n_request.su  n_serial.d  n_serial.su  n_str.d  n_ua.d  n_ua.su  subdir.mk
STM32CubeIDE/Debug/sparrow-lora/Application/App/: app.d  app.su  appinit.d  appinit.su  atp.d  atp.su  dfu.d  dfu.su  dfuload.d  dfuload.su  flash.d  flash.su  gateway.d  gateway.su  led.d  led.su  note.d  note.su  post.d  post.su  radioinit.d  radioinit.su  sched.d  sched.su  sensor.d  sensor.su  subdir.mk  trace.d  trace.su  util.d  util.su
STM32CubeIDE/Debug/sparrow-lora/Application/Core/: debug.d  debug.su  main.d  main.su  radio_board_if.d  radio_board_if.su  stm32_lpm_if.d  stm32_lpm_if.su  stm32wlxx_hal_msp.d  stm32wlxx_hal_msp.su  stm32wlxx_it.d  stm32wlxx_it.su  subdir.mk  system_stm32wlxx.d  system_stm32wlxx.su  timer_if.d  timer_if.su  usart_if.d  usart_if.su  util_if.d  util_if.su
STM32CubeIDE/Debug/sparrow-lora/Application/Gateway/: auth.d  auth.su  subdir.mk
STM32CubeIDE/Debug/sparrow-lora/Application/Sensor/: bme.su  init.su  pir.su
STM32CubeIDE/Debug/sparrow-lora/Drivers/STM32WLxx_HAL_Driver/: stm32wlxx_hal.d  stm32wlxx_hal_adc.d  stm32wlxx_hal_adc.su  stm32wlxx_hal_adc_ex.d  stm32wlxx_hal_adc_ex.su  stm32wlxx_hal_cortex.d  stm32wlxx_hal_cryp.d  stm32wlxx_hal_cryp.su  stm32wlxx_hal_dma.d  stm32wlxx_hal_dma_ex.d  stm32wlxx_hal_exti.d  stm32wlxx_hal_flash.d  stm32wlxx_hal_flash_ex.d  stm32wlxx_hal_gpio.d  stm32wlxx_hal_i2c.d  stm32wlxx_hal_i2c_ex.d  stm32wlxx_hal_pwr.d  stm32wlxx_hal_pwr_ex.d  stm32wlxx_hal_rcc.d  stm32wlxx_hal_rcc.su  stm32wlxx_hal_rcc_ex.d  stm32wlxx_hal_rng.d  stm32wlxx_hal_rng.su  stm32wlxx_hal_rtc.d  stm32wlxx_hal_rtc.su  stm32wlxx_hal_rtc_ex.d  stm32wlxx_hal_rtc_ex.su  stm32wlxx_hal_spi.d  stm32wlxx_hal_spi.su  stm32wlxx_hal_subghz.d  stm32wlxx_hal_subghz.su  stm32wlxx_hal_tim.d  stm32wlxx_hal_tim.su  stm32wlxx_hal_tim_ex.d  stm32wlxx_hal_tim_ex.su  stm32wlxx_hal_uart.d  stm32wlxx_hal_uart.su  stm32wlxx_hal_uart_ex.d  stm32wlxx_hal_uart_ex.su  subdir.mk
STM32CubeIDE/Debug/sparrow-lora/Middlewares/SubGHz_Phy/: radio.d  radio.su  radio_driver.d  radio_driver.su  subdir.mk
STM32CubeIDE/Debug/sparrow-lora/Utilities/: stm32_adv_trace.d  stm32_lpm.d  stm32_mem.d  stm32_seq.d  stm32_seq.su  stm32_systime.d  stm32_timer.d  stm32_tiny_vsnprintf.d  subdir.mk
STM32CubeIDE/Debug/sys/: startup_stm32wl55jcix.d  subdir.mk  syscalls.d  sysmem.d
diag/: diag.c
sparrow-application/: CMakeLists.txt  LICENSE  init.c
sparrow-application/THAT-button/: THAT-button.c  THAT-button.h
sparrow-application/bme/: bme.c  bme.h
sparrow-application/button/: button.c  button.h
sparrow-application/contact-switch/: contact-switch.c  contact-switch.h
sparrow-application/diag/: diag.c  diag.h
sparrow-application/hc-sr04/: hc-sr04.c  hc-sr04.h  hc-sr04_it.c
sparrow-application/hcsr04q/: hcsr04q.c  hcsr04q.h
sparrow-application/ping/: ping.c  ping.h
sparrow-application/pir/: pir.c  pir.h
user-defined-sensors/: CMakeLists.txt  init.c  register.c
user-defined-sensors/bme/: bme.c  bme.h
user-defined-sensors/button/: button.c  button.h
user-defined-sensors/diag/: diag.c
user-defined-sensors/ping/: ping.c  ping.h
user-defined-sensors/pir/: pir.c  pir.h
